--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:14
-    container_name: claims_postgres
+    container_name: claims11_postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin123
